# SPDX-FileCopyrightText: 2024 Romain Brault <mail@romainbrault.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme>=24.1.0",
    "hatch-vcs>=0.4.0",
    "hatchling>=1.26.0",
]

[project]
name = "test-rtd-linux-py312-test"
description = "A Python package."
keywords = [
    "Python",
]
license = "MIT OR Apache-2.0"

license-files.paths = [
    "LICENSES/Apache-2.0.txt",
    "LICENSES/MIT.txt",
    "LICENSES/CC0-1.0.txt",
]
maintainers = [
    { name = "Romain Brault", email = "mail@romainbrault.com" },
]
authors = [
    { name = "Romain Brault", email = "mail@romainbrault.com" },
]
requires-python = ">=3.12,<4.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "distro>=1.9.0",
]

[dependency-groups]
dev = [
    { include-group = "audit-maintainability" },
    { include-group = "audit-vulnerabilities" },
    { include-group = "check-exceptions" },
    { include-group = "check-maintainability" },
    { include-group = "coverage" },
    { include-group = "editor" },
    { include-group = "lint" },
    { include-group = "localization" },
    { include-group = "profile" },
    { include-group = "serve-documentation" },
    { include-group = "tests" },
]
tests = [
    "beartype>=0.18.5",
    "hypothesis>=6.110.1",
    "pytest>=8.3.2",
    "pytest-cov>=5",
    "pytest-html>=4.1.1",
    "pytest-md-report>=0.6.2",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6.1",
    "xdoctest[colors]>=1.2.0",
]
editor = [
    "pynvim>=0.4.3",
]
profile = [
    "scalene>=1.5.19",
]
lint = [
    "pylint>=3.2.6",
    { include-group = "tests" },
]
check-types = [
    "pyright>=1.1.386",
    { include-group = "tests" },
]
coverage = [
    "coverage>=7.6.1",
]
audit-vulnerabilities = [
    "pip-audit>=2.7.3",
]
audit-maintainability = [
    "radon>=6.0.1",
]
check-exceptions = [
    "tryceratops>=2.4",
]
check-maintainability = [
    "xenon>=0.9.3",
]
check-vulnerabilities = [
    "bandit>=1.7.10",
]
build-documentation = [
    "myst-parser[linkify]>=3.0.1",
    "pydata-sphinx-theme>=0.16.0",
    "sphinx>=7.4.7",
    "sphinx-autoapi>=3.3.3",
    "sphinx-click>=6.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-napoleon>=0.7.0",
    "sphinxcontrib-spelling>=8.0.0",
]
serve-documentation = [
    "sphinx-autobuild>=2024.10.3",
    { include-group = "build-documentation" },
]
localization = [
    "babel>=2.16",
]

[tool.pyproject-fmt]
column_width = 79
indent = 4
keep_full_version = true
max_supported_python = "3.13"

[tool.uv]
managed = true
cache-keys = [
    { git = { commit = true, tags = true } },
    { file = "pyproject.toml" },
    { file = "hatch.toml" },
    { file = "hatch_build.py" },
]
